--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                     width="35px"></span>&nbsp;, I'm <span class="header">Denis Ivanov</span>
             <div class="center">
                 <div>
-                    <img src="assets/images/dp_male.svg" alt="" class="rounded-circle" height="200" width="200">
+                    <img src="assets/images/dsfdfas.png" alt="" class="rounded-circle" height="200" width="200">
                 </div>
                 <br />
                 <span style="display: inline;">I am into <span class="animated-text"
-                        data-words="Designing, UI/UX, Cloud Computing, Web Development, Open Source, Mentoring"></span>
+                        data-words="Web Development, Mobile app development, CI/CD DevOps, Blockchain, Designing, UI/UX, Cloud Computing,Open Source, Mentoring"></span>
                 </span>
                 <div>
                     <div class="social-icons">
